# SupraBench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  submit.slurm
configs/: README.md
configs/models/: README.md  chatgpt.yaml  llama31_8b_supra_v2_lora.yaml  openai_gpt54mini.yaml  openai_gpt54nano_xhigh.yaml  openrouter-claude-sonnet-4.6.yaml  openrouter-deepseek-v4-pro.yaml  openrouter-gemini-3-flash.yaml  openrouter-gpt-5.4-nano.yaml  openrouter-llama-3.1-70b.yaml  openrouter-llama-3.1-8b.yaml  openrouter-qwen3.5-27b.yaml  openrouter-qwen3.5-9b.yaml  openrouter_claude_sonnet46.yaml  openrouter_deepseek_v4.yaml  openrouter_gemini3_flash.yaml  openrouter_gpt54mini.yaml  openrouter_gpt54nano_xhigh.yaml  openrouter_llama31_70b.yaml  openrouter_llama31_8b.yaml  openrouter_qwen35_27b.yaml  openrouter_qwen35_9b.yaml  qwen3-0.6b.yaml  qwen3-vl-4b.yaml  qwen3.yaml  qwen35_27b_base.yaml  qwen35_27b_eupmc_lora.yaml  qwen35_27b_eupmc_lora_vllm.yaml  qwen35_27b_supra_v2_lora.yaml  qwen35_27b_supra_v2_lora_guided.yaml  qwen35_9b_supra_v2_lora.yaml
configs/tasks/: README.md  bap_base.yaml  bap_cot.yaml  bap_fewshot.yaml  example.yaml  hgd_base.yaml  hgd_cot.yaml  hgd_fewshot.yaml  mi.yaml  sid_base.yaml  sid_cot.yaml  sid_fewshot.yaml  task1.yaml  task1_base.yaml  task1_cot.yaml  task1_fewshot.yaml  task2_base.yaml  task2_cot.yaml  task2_fewshot.yaml  task3_base.yaml  task3_cot.yaml  task3_fewshot.yaml  task4.yaml  task5.yaml  task7_base.yaml  task7_cot.yaml  task7_fewshot.yaml  tbs_base.yaml  tbs_cot.yaml  tbs_fewshot.yaml  vqa_identification.yaml  vqa_identification_base.yaml  vqa_identification_cot.yaml  vqa_identification_fewshot.yaml  vqa_logka.yaml
configs/train/: README.md  accelerate_fsdp.yaml  cpt_llama31_8b_supra_v2.yaml  cpt_qwen35_9b_supra_v2.yaml  cpt_qwen35_eupmc.yaml  cpt_qwen35_supra_v2.yaml
data/bap/: sample.json
data/hgd/: prompts_cot.jsonl  task3.jsonl
data/sid/: eval.parquet
data/task1/: base.jsonl
data/task2/: base.jsonl
data/task3/: fewshot_examples.json  prompts_base.jsonl  prompts_fewshot.jsonl
data/task7/: fewshot_examples.json  host_smiles_dict.json  prompts_base.jsonl  prompts_cot.jsonl  stats.json
experiments/: README.md
experiments/ziming/: README.md
outputs/: .gitignore  README.md
results/: README.md  comparison.md
results/analysis/: task1_failure_examples.md  task1_outliers.md
results/metrics/: bap_base_deepseek-v4-pro.json  bap_base_gemini-3-flash-preview_nothinking.json  bap_base_gpt-5.4-mini_nothinking.json  bap_base_gpt-5.4-nano_xhigh.json  bap_base_llama-3.1-70b-instruct.json  bap_base_llama-3.1-8b-instruct.json  bap_base_llama3.1-8b-supra-v2-lora.json  bap_base_qwen3.5-27b.json  bap_base_qwen3.5-9b-supra-v2-lora.json  bap_base_qwen3.5-9b.json  bap_cot_deepseek-v4-pro.json  bap_cot_gemini-3-flash-preview_nothinking.json  bap_cot_gpt-5.4-mini_nothinking.json  bap_cot_gpt-5.4-nano_xhigh.json  bap_cot_llama-3.1-70b-instruct.json  (+89 more)
scripts/: README.md  aggregate_results.py  eval.sh  eval_openai.sh  eval_openrouter.sh  run_vqa_identification_all.sh
src/: README.md  main.py
tools/: consolidate_predictions.py  fsdp_to_peft_adapter.py  generate_questions.py
(+494 files in other folders)
